--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t discoveranirban/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run discoveranirban/docker-react npm run test -- --coverage
+  - docker run -e CI=true discoveranirban/docker-react npm run test -- --coverage
